packages/swift/Sources/CVoicevoxCore/include/voicevox_core.h

typedef int32_t VoicevoxAccelerationMode;
typedef int32_t VoicevoxResultCode;
/**
 * テキスト解析器としてのOpen JTalk。
 *
 * <b>構築</b>(_construction_)は ::voicevox_open_jtalk_rc_new で行い、<b>破棄</b>(_destruction_)は ::voicevox_open_jtalk_rc_delete で行う。
 *
 * 参照カウント方式のスマートポインタ(reference-counted smart pointer)であり、
 * ::voicevox_synthesizer_new に渡されるときには参照カウンタがインクリメントされる形でオブジェクトの共有が行われる。
 *
 * \example{
 * ```c
 * OpenJtalkRc *open_jtalk;
 * voicevox_open_jtalk_rc_new("./open_jtalk_dic_utf_8-1.11", &open_jtalk);
 * // ⋮
 * voicevox_open_jtalk_rc_delete(open_jtalk);
 * ```
 * }
 *
 * \orig-impl{OpenJtalkRc}
 */
typedef struct OpenJtalkRc OpenJtalkRc;
/**
 * ONNX Runtime。
 *
 * シングルトンであり、インスタンスは高々一つ。
 *
 * ```c
 * const VoicevoxOnnxruntime *ort1;
 * voicevox_onnxruntime_load_once(
 *     voicevox_make_default_load_onnxruntime_options(), &ort1);
 * const VoicevoxOnnxruntime *ort2 = voicevox_onnxruntime_get();
 * assert(ort1 == ort2);
 * ```
 *
 * \orig-impl{VoicevoxOnnxruntime}
 */
typedef struct VoicevoxOnnxruntime VoicevoxOnnxruntime;
/**
 * 音声シンセサイザ。
 *
 * <b>構築</b>(_construction_)は ::voicevox_synthesizer_new で行い、<b>破棄</b>(_destruction_)は ::voicevox_synthesizer_delete で行う。
 *
 * \orig-impl{VoicevoxSynthesizer}
 */
typedef struct VoicevoxSynthesizer VoicevoxSynthesizer;
/**
 * 音声モデルファイル。
 *
 * VVMファイルと対応する。
 * <b>構築</b>(_construction_)は ::voicevox_voice_model_file_open で行い、<b>破棄</b>(_destruction_)は ::voicevox_voice_model_file_delete で行う。
 *
 * \orig-impl{VoicevoxVoiceModelFile}
 */
typedef struct VoicevoxVoiceModelFile VoicevoxVoiceModelFile;
/**
 * ::voicevox_synthesizer_new のオプション。
 *
 * \no-orig-impl{VoicevoxInitializeOptions}
 */
typedef struct VoicevoxInitializeOptions {
  /**
   * ハードウェアアクセラレーションモード
   */
  VoicevoxAccelerationMode acceleration_mode;
  /**
   * CPU利用数を指定
   * 0を指定すると環境に合わせたCPUが利用される
   */
  uint16_t cpu_num_threads;
} VoicevoxInitializeOptions;
/**
 * 音声モデルID。
 *
 * ::VoicevoxSynthesizer はこのIDをキーとして、音声モデルのロード・アンロードを行う。
 *
 * 同じIDを持つ複数のVVMファイルがあるときは、ファイルとして新しい方を常に使うことが推奨される。[VOICEVOX/voicevox_vvm]で管理されているVVMでは、次の方針が取られている。
 *
 * - VVMに含まれる声が変化せず、軽微な修正のみのときはIDを使い回してリリースする。
 * - VVMに含まれる声が明確に変化するかもしくは削除されるような実質的な変更のときは、新しいIDを割り振ってリリースする。
 *
 * これ以外は未定であり、更なるルールについては[VOICEVOX/voicevox_vvm#19]で議論される予定。
 *
 * \orig-impl{VoicevoxVoiceModelId}
 *
 * [VOICEVOX/voicevox_vvm]: https://github.com/VOICEVOX/voicevox_vvm
 * [VOICEVOX/voicevox_vvm#19]: https://github.com/VOICEVOX/voicevox_vvm/issues/19
 */
typedef const uint8_t (*VoicevoxVoiceModelId)[16];
/**
 * スタイルID。
 *
 * VOICEVOXにおける、ある<i>キャラクター</i>のある<i>スタイル</i>を指す。
 *
 * \orig-impl{VoicevoxStyleId}
 */
typedef uint32_t VoicevoxStyleId;
VoicevoxResultCode voicevox_voice_model_file_open(const char *path,
                                                  struct VoicevoxVoiceModelFile **out_model);
void voicevox_voice_model_file_id(const struct VoicevoxVoiceModelFile *model,
                                  uint8_t (*output_voice_model_id)[16]);
char *voicevox_voice_model_file_create_metas_json(const struct VoicevoxVoiceModelFile *model);
void voicevox_voice_model_file_delete(struct VoicevoxVoiceModelFile *model);
VoicevoxResultCode voicevox_synthesizer_new(const struct VoicevoxOnnxruntime *onnxruntime,
                                            const struct OpenJtalkRc *open_jtalk,
                                            struct VoicevoxInitializeOptions options,
                                            struct VoicevoxSynthesizer **out_synthesizer);
void voicevox_synthesizer_delete(struct VoicevoxSynthesizer *synthesizer);
VoicevoxResultCode voicevox_synthesizer_load_voice_model(const struct VoicevoxSynthesizer *synthesizer,
                                                         const struct VoicevoxVoiceModelFile *model);
VoicevoxResultCode voicevox_synthesizer_unload_voice_model(const struct VoicevoxSynthesizer *synthesizer,
                                                           VoicevoxVoiceModelId model_id);
const struct VoicevoxOnnxruntime *voicevox_synthesizer_get_onnxruntime(const struct VoicevoxSynthesizer *synthesizer);
bool voicevox_synthesizer_is_gpu_mode(const struct VoicevoxSynthesizer *synthesizer);
bool voicevox_synthesizer_is_loaded_voice_model(const struct VoicevoxSynthesizer *synthesizer,
                                                VoicevoxVoiceModelId model_id);
char *voicevox_synthesizer_create_metas_json(const struct VoicevoxSynthesizer *synthesizer);
VoicevoxResultCode voicevox_onnxruntime_create_supported_devices_json(const struct VoicevoxOnnxruntime *onnxruntime,
                                                                      char **output_supported_devices_json);
VoicevoxResultCode voicevox_synthesizer_create_audio_query_from_kana(const struct VoicevoxSynthesizer *synthesizer,
                                                                     const char *kana,
                                                                     VoicevoxStyleId style_id,
                                                                     char **output_audio_query_json);
VoicevoxResultCode voicevox_synthesizer_create_audio_query(const struct VoicevoxSynthesizer *synthesizer,
                                                           const char *text,
                                                           VoicevoxStyleId style_id,
                                                           char **output_audio_query_json);
VoicevoxResultCode voicevox_synthesizer_create_accent_phrases_from_kana(const struct VoicevoxSynthesizer *synthesizer,
                                                                        const char *kana,
                                                                        VoicevoxStyleId style_id,
                                                                        char **output_accent_phrases_json);