packages/flutter/lib/src/bindings.g.dart


  int voicevox_voice_model_file_open(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Pointer<VoicevoxVoiceModelFile>> out_model,
  ) {
    return _voicevox_voice_model_file_open(
      path,
      out_model,
    );
  }

  late final _voicevox_voice_model_file_openPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<VoicevoxVoiceModelFile>>)>>(
      'voicevox_voice_model_file_open');
  late final _voicevox_voice_model_file_open =
      _voicevox_voice_model_file_openPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<VoicevoxVoiceModelFile>>)>();

  void voicevox_voice_model_file_id(
    ffi.Pointer<VoicevoxVoiceModelFile> model,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> output_voice_model_id,
  ) {
    return _voicevox_voice_model_file_id(
      model,
      output_voice_model_id,
    );
  }

  late final _voicevox_voice_model_file_idPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<VoicevoxVoiceModelFile>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_voice_model_file_id');
  late final _voicevox_voice_model_file_id =
      _voicevox_voice_model_file_idPtr.asFunction<
          void Function(ffi.Pointer<VoicevoxVoiceModelFile>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  ffi.Pointer<ffi.Char> voicevox_voice_model_file_create_metas_json(
    ffi.Pointer<VoicevoxVoiceModelFile> model,
  ) {
    return _voicevox_voice_model_file_create_metas_json(
      model,
    );
  }

  late final _voicevox_voice_model_file_create_metas_jsonPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(
                  ffi.Pointer<VoicevoxVoiceModelFile>)>>(
      'voicevox_voice_model_file_create_metas_json');
  late final _voicevox_voice_model_file_create_metas_json =
      _voicevox_voice_model_file_create_metas_jsonPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<VoicevoxVoiceModelFile>)>();

  void voicevox_voice_model_file_delete(
    ffi.Pointer<VoicevoxVoiceModelFile> model,
  ) {
    return _voicevox_voice_model_file_delete(
      model,
    );
  }

  late final _voicevox_voice_model_file_deletePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<VoicevoxVoiceModelFile>)>>(
      'voicevox_voice_model_file_delete');
  late final _voicevox_voice_model_file_delete =
      _voicevox_voice_model_file_deletePtr
          .asFunction<void Function(ffi.Pointer<VoicevoxVoiceModelFile>)>();

  int voicevox_synthesizer_new(
    ffi.Pointer<VoicevoxOnnxruntime> onnxruntime,
    ffi.Pointer<OpenJtalkRc> open_jtalk,
    VoicevoxInitializeOptions options,
    ffi.Pointer<ffi.Pointer<VoicevoxSynthesizer>> out_synthesizer,
  ) {
    return _voicevox_synthesizer_new(
      onnxruntime,
      open_jtalk,
      options,
      out_synthesizer,
    );
  }

  late final _voicevox_synthesizer_newPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxOnnxruntime>,
                  ffi.Pointer<OpenJtalkRc>,
                  VoicevoxInitializeOptions,
                  ffi.Pointer<ffi.Pointer<VoicevoxSynthesizer>>)>>(
      'voicevox_synthesizer_new');
  late final _voicevox_synthesizer_new =
      _voicevox_synthesizer_newPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxOnnxruntime>,
              ffi.Pointer<OpenJtalkRc>,
              VoicevoxInitializeOptions,
              ffi.Pointer<ffi.Pointer<VoicevoxSynthesizer>>)>();

  void voicevox_synthesizer_delete(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
  ) {
    return _voicevox_synthesizer_delete(
      synthesizer,
    );
  }

  late final _voicevox_synthesizer_deletePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<VoicevoxSynthesizer>)>>(
      'voicevox_synthesizer_delete');
  late final _voicevox_synthesizer_delete = _voicevox_synthesizer_deletePtr
      .asFunction<void Function(ffi.Pointer<VoicevoxSynthesizer>)>();

  int voicevox_synthesizer_load_voice_model(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<VoicevoxVoiceModelFile> model,
  ) {
    return _voicevox_synthesizer_load_voice_model(
      synthesizer,
      model,
    );
  }

  late final _voicevox_synthesizer_load_voice_modelPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<VoicevoxVoiceModelFile>)>>(
      'voicevox_synthesizer_load_voice_model');
  late final _voicevox_synthesizer_load_voice_model =
      _voicevox_synthesizer_load_voice_modelPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxSynthesizer>,
              ffi.Pointer<VoicevoxVoiceModelFile>)>();

  int voicevox_synthesizer_unload_voice_model(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    VoicevoxVoiceModelId model_id,
  ) {
    return _voicevox_synthesizer_unload_voice_model(
      synthesizer,
      model_id,
    );
  }

  late final _voicevox_synthesizer_unload_voice_modelPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>, VoicevoxVoiceModelId)>>(
      'voicevox_synthesizer_unload_voice_model');
  late final _voicevox_synthesizer_unload_voice_model =
      _voicevox_synthesizer_unload_voice_modelPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxSynthesizer>, VoicevoxVoiceModelId)>();

  ffi.Pointer<VoicevoxOnnxruntime> voicevox_synthesizer_get_onnxruntime(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
  ) {
    return _voicevox_synthesizer_get_onnxruntime(
      synthesizer,
    );
  }

  late final _voicevox_synthesizer_get_onnxruntimePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<VoicevoxOnnxruntime> Function(
                  ffi.Pointer<VoicevoxSynthesizer>)>>(
      'voicevox_synthesizer_get_onnxruntime');
  late final _voicevox_synthesizer_get_onnxruntime =
      _voicevox_synthesizer_get_onnxruntimePtr.asFunction<
          ffi.Pointer<VoicevoxOnnxruntime> Function(
              ffi.Pointer<VoicevoxSynthesizer>)>();

  bool voicevox_synthesizer_is_gpu_mode(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
  ) {
    return _voicevox_synthesizer_is_gpu_mode(
      synthesizer,
    );
  }

  late final _voicevox_synthesizer_is_gpu_modePtr = _lookup<
          ffi
          .NativeFunction<ffi.Bool Function(ffi.Pointer<VoicevoxSynthesizer>)>>(
      'voicevox_synthesizer_is_gpu_mode');
  late final _voicevox_synthesizer_is_gpu_mode =
      _voicevox_synthesizer_is_gpu_modePtr
          .asFunction<bool Function(ffi.Pointer<VoicevoxSynthesizer>)>();

  bool voicevox_synthesizer_is_loaded_voice_model(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    VoicevoxVoiceModelId model_id,
  ) {
    return _voicevox_synthesizer_is_loaded_voice_model(
      synthesizer,
      model_id,
    );
  }

  late final _voicevox_synthesizer_is_loaded_voice_modelPtr = _lookup<
          ffi.NativeFunction<
              ffi.Bool Function(
                  ffi.Pointer<VoicevoxSynthesizer>, VoicevoxVoiceModelId)>>(
      'voicevox_synthesizer_is_loaded_voice_model');
  late final _voicevox_synthesizer_is_loaded_voice_model =
      _voicevox_synthesizer_is_loaded_voice_modelPtr.asFunction<
          bool Function(
              ffi.Pointer<VoicevoxSynthesizer>, VoicevoxVoiceModelId)>();

  ffi.Pointer<ffi.Char> voicevox_synthesizer_create_metas_json(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
  ) {
    return _voicevox_synthesizer_create_metas_json(
      synthesizer,
    );
  }

  late final _voicevox_synthesizer_create_metas_jsonPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(
                  ffi.Pointer<VoicevoxSynthesizer>)>>(
      'voicevox_synthesizer_create_metas_json');
  late final _voicevox_synthesizer_create_metas_json =
      _voicevox_synthesizer_create_metas_jsonPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<VoicevoxSynthesizer>)>();

  int voicevox_onnxruntime_create_supported_devices_json(
    ffi.Pointer<VoicevoxOnnxruntime> onnxruntime,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_supported_devices_json,
  ) {
    return _voicevox_onnxruntime_create_supported_devices_json(
      onnxruntime,
      output_supported_devices_json,
    );
  }

  late final _voicevox_onnxruntime_create_supported_devices_jsonPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(ffi.Pointer<VoicevoxOnnxruntime>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_onnxruntime_create_supported_devices_json');
  late final _voicevox_onnxruntime_create_supported_devices_json =
      _voicevox_onnxruntime_create_supported_devices_jsonPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxOnnxruntime>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_synthesizer_create_audio_query_from_kana(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> kana,
    int style_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_audio_query_json,
  ) {
    return _voicevox_synthesizer_create_audio_query_from_kana(
      synthesizer,
      kana,
      style_id,
      output_audio_query_json,
    );
  }

  late final _voicevox_synthesizer_create_audio_query_from_kanaPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_synthesizer_create_audio_query_from_kana');
  late final _voicevox_synthesizer_create_audio_query_from_kana =
      _voicevox_synthesizer_create_audio_query_from_kanaPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxSynthesizer>, ffi.Pointer<ffi.Char>,
              int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_synthesizer_create_audio_query(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> text,
    int style_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_audio_query_json,
  ) {
    return _voicevox_synthesizer_create_audio_query(
      synthesizer,
      text,
      style_id,
      output_audio_query_json,
    );
  }

  late final _voicevox_synthesizer_create_audio_queryPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_synthesizer_create_audio_query');
  late final _voicevox_synthesizer_create_audio_query =
      _voicevox_synthesizer_create_audio_queryPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxSynthesizer>, ffi.Pointer<ffi.Char>,
              int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_synthesizer_create_accent_phrases_from_kana(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> kana,
    int style_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_accent_phrases_json,
  ) {
    return _voicevox_synthesizer_create_accent_phrases_from_kana(
      synthesizer,
      kana,
      style_id,
      output_accent_phrases_json,
    );
  }
